[package]
name = "ace_dodge"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["render", "bevy_wgpu", "bevy_winit", "png", "mp3"] }
bevy_kira_audio = { version = "0.5", features = ["mp3"] }
rand = "0.8.4"